Update: 代表写真の画像をhirohitotanaka.jpgに変更

--- a/index.html
+++ b/index.html
@@ -652,10 +652,7 @@
         </div>
         <div
           class="split-image"
-          style="
-            background: url('https://images.unsplash.com/photo-1560250097-0b93528c311a?w=800&fit=crop')
-              center/cover;
-          "
+          style="background: url('hirohitotanaka.jpg') center/cover"
         ></div>
       </div>
     </section>
