--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <section
       class="hero"
       style="
-        background: url('https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=1920&fit=crop')
+        background: url('K2A6528.jpg')
           center/cover;
         position: relative;
       "
