--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
         <div
           class="split-image"
           style="
-            background: url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=800&fit=crop')
+            background: url('company.jpg')
               center/cover;
           "
         ></div>
