--- a/asahigousen_about_wireframe.html
+++ b/asahigousen_about_wireframe.html
@@ -445,7 +445,7 @@
         <div
           class="split-image"
           style="
-            background: url('https://images.unsplash.com/photo-1560250097-0b93528c311a?w=800&fit=crop')
+            background: url('hirohitotanaka.jpg')
               center/cover;
           "
         ></div>
